  - Add db-migration for changes to `opengever.globalindex`.


- OGDS synchronization [lgraf]:

  - LDAP util: When querying for schema, deal with servers that don't support
    listing all operational attributes (RFC 3673).
  - OGDS sync: Unify OGDS synchronization so there's a single function
    that does the sync and that can be called from anywhere.

- Additional Improvements:

  - Simplify LaTex listing adapters and include base-class.
    [phgross, deiferni]

  - Remove `ClientId` viewlet.
    [phgross, deiferni]

  - Remove `GlobalindexMaintenanceView` and `OpengeverView`.
    [phgross, deiferni]

  - Improve responsive design.
    [phgross, deiferni]

  - Display user-name in personal overview title.
    [phgross, deiferni]

  - Use correct content-type when returning 'OK' responses.
    [phgross, deiferni]

  - Sort groupmembers by label for groupmembers list.
    [phgross, deiferni]

  - Use ftw.profilehook instead of custom import steps.
    [phgross, deiferni]

  - Add contact-service for local contacts.
    [phgross, deiferni]

  - Refactor tree portlet.

      - Performance improvements.
      - Use JavaScript tree API for building the tree.
      - Add repository favorites.

    [jone]

  - Update DocProperties when documents are moved/pasted and checked-in/checked out.
    Create a journal entry when modifying/initializing DocProperties.
    [deiferni]

  - Display a warning message in the download confirmation overlay when no file is available.
    [deiferni]

  - Fix an issue with z3c.form inline validation.
    [deiferni]

  - Reactivate statefilter for Dossiers.
    [phgross]

  - Make reference_prefix_manager deal properly with already deleted objects.
    [phgross]

  - Added option to checkin documents without comment.
    [lknoepfel, deiferni]

  - Fix missing file in initial template versions.
    [deiferni]

  - Also display `pdf-tasks-listing` and `task-report` actions for inbox task-listings.
    [deiferni]
