@@ -120,6 +120,8 @@ Changelog
     listing all operational attributes (RFC 3673).
   - OGDS sync: Unify OGDS synchronization so there's a single function
     that does the sync and that can be called from anywhere.
+  - OGDS sync: Add a `bin/instance sync_ogds` zopectl command that
+    can be used from a cron job.
 
 - Additional Improvements:
 
